<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_monitor_latency</name>
  <version>0.0.1</version>
  <description>ROSNEURO tools for monitoring latencies in the pipeline</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
	
</package>
